tests/error/result_errors/state_result_not_qubit2.err
Error: Type mismatch (at $FILE:8:28)
  | 
6 | def main() -> None:
7 |     q1 = qubit()
8 |     state_result("tag", q1, 123)
  |                             ^^^ Expected expression of type `qubit`, got `int`

Guppy compilation failed due to 1 previous error
